<resources>
    <string name="app_name">Expense Caluculator</string>
    <string name="addExpense">Add Expense</string>
    <string name="editExpense">Edit Expense</string>
    <string name="delExpense">Delete Expense</string>
    <string name="showExpense">Show Expense</string>
    <string name="finish">Finish</string>
    <string name="addExpenseHead">Add An Expense</string>
    <string name="addExpenseName">Expense Name</string>
    <string name="expenseCategory">Category</string>
    <string name="expenseAmount">Amount</string>
    <string name="expenseDate">Date</string>
    <string name="expenseReceipt">Receipt</string>
    <string name="selectExpense">Select Expense</string>
    <string name="expenseDetails">Expense Details</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string-array name="expenseCategoryArray">
        <item>Groceries</item>
        <item>Invoice</item>
        <item>Transportation</item>
        <item>Shopping</item>
        <item>Rent</item>
        <item>Trips</item>
        <item>Utilities</item>
        <item>Other</item>
    </string-array>
    <string name="showName">Name : </string>
    <string name="showAmount">Amount : </string>
    <string name="showCategory">Category : </string>
    <string name="showDate">Date : </string>
    <string name="emptyString"></string>
</resources>
