<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.cn.expensecalculator.EditActivity">
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/selectExpense"
        android:id="@+id/buttonSelectExpDE"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10sp"
        android:orientation="vertical"
        android:layout_below="@+id/buttonSelectExpDE"
        android:id="@+id/linearLayoutEditExpense">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/addExpenseName"
            android:textSize="15sp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editTextNewExpenseName"
            android:textColor="@color/colorBlack"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewNewCategory"
            android:text="@string/expenseCategory"
            android:textSize="15sp"
            android:layout_marginTop="7sp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spinnerNewCategory"
            android:layout_marginTop="5sp"
            android:entries="@array/expenseCategoryArray">
        </TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewAmount"
            android:text="@string/expenseAmount"
            android:textSize="15sp"
            android:layout_marginTop="7sp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/editTextNewAmount"
            android:textSize="15sp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewDate"
            android:text="@string/expenseDate"
            android:textSize="15sp"
            android:layout_marginTop="7sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:textSize="15sp"
            android:ems="10"
            android:id="@+id/editTextNewExpenseDate"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewReceipt"
            android:text="@string/expenseReceipt"
            android:textSize="15sp"
            android:layout_marginTop="7sp"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="150sp"
            android:contentDescription="@string/expenseReceipt"
            android:id="@+id/imageButtonReceiptDE"
            android:src="@drawable/receipt_scan1">

        </ImageView>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/linearLayoutSaveEditedExpense"
            android:layout_gravity="center"
            android:padding="5sp">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/buttonDeleteDE"
                android:gravity="center"
                android:text="@string/delete"
                android:textSize="13sp"
                android:nestedScrollingEnabled="false" />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/buttonCancelDE"
                android:gravity="center"
                android:text="@string/cancel"
                android:layout_marginLeft="20sp"/>
        </LinearLayout>
    </LinearLayout>


</RelativeLayout>
