<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.cn.expensecalculator.ShowActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/showExpenseHead"
        android:text="@string/showExpense"
        android:textSize="25sp"
        android:gravity="center"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/nameLayout"
            android:layout_below="@+id/showExpenseHead">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textViewShowName"
                android:text="@string/showName"
                android:textSize="20sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/editTextShowName"
                android:textSize="20sp"
                android:padding="4sp"
                android:layout_marginLeft="41sp"
                android:textColor="@color/colorBlack"
            android:text="@string/emptyString" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/categoryLayout"
            android:layout_below="@+id/nameLayout">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textViewShowCategory"
                android:text="@string/showCategory"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/editTextShowCategory"
                android:textSize="20sp"
                android:layout_marginLeft="20sp"
                android:textColor="@color/colorBlack"
                android:text="@string/emptyString" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/amountLayout"
            android:layout_below="@+id/categoryLayout">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textViewShowAmount"
                android:text="@string/showAmount"
                android:textSize="20sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/editTextShowAmount"
                android:textSize="20sp"
                android:textColor="@color/colorBlack"
                android:layout_marginLeft="30sp"
                android:text="@string/emptyString" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/dateLayout"
            android:layout_below="@+id/amountLayout">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textViewShowDate"
                android:text="@string/showDate"
                android:textSize="20sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/editTextShowDate"
                android:text="@string/emptyString"
                android:textColor="@color/colorBlack"
                android:layout_marginLeft="58sp"
                android:textSize="20sp"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/receiptLayout"
            android:layout_below="@+id/dateLayout">
    <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textViewShowReceipt"
                android:text="@string/expenseReceipt"
                android:textSize="20sp"
        android:gravity="center"
            android:layout_gravity="center"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="150sp"
                android:id="@+id/imageViewShowReceipt"
                android:layout_gravity="center"
                android:src="@drawable/receipt_scan" />
    </LinearLayout>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:orientation="horizontal"
            android:id="@+id/buttonsLayout"
            android:layout_below="@+id/receiptLayout">
                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/imageSwitchFirst"
                    android:layout_marginLeft="5sp"
                    android:layout_marginRight="5sp"
                    android:src="@drawable/ic_first_page_black_24dp"/>
                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/imageSwitchPrev"
                    android:layout_marginLeft="5sp"
                    android:layout_marginRight="5sp"
                    android:src="@drawable/ic_chevron_left_black_24dp"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5sp"
                    android:layout_marginRight="5sp"
                    android:id="@+id/buttonFinishShowExpenses"
                    android:text="@string/finish"/>
                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/imageSwitchNext"
                    android:layout_marginLeft="5sp"
                    android:layout_marginRight="5sp"
                    android:src="@drawable/ic_chevron_right_black_24dp"/>
                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/imageSwitchLast"
                    android:layout_marginLeft="5sp"
                    android:layout_marginRight="10sp"
                    android:src="@drawable/ic_last_page_black_24dp"/>
            </LinearLayout>
</RelativeLayout>
